Changed wording of some description (Team section). Added Roadmap, and Partnerships sections.

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/import.min.css">
+    <!-- Other CSS -->
+    <link rel="stylesheet" href="assets/css/vertical_timeline.css">
 </head>
 
 <body class="animate-in">
@@ -36,6 +38,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#getting-started">Getting Started</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#roadmap">Development Roadmap</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#partnerships">Partnerships</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#features">Features</a>
@@ -123,7 +131,7 @@
                                 <img src="assets/img/icon/crex24.png" width="80" height="80"/>
                             </a>
                             <a href="https://wallet.escodex.com/market/ESCODEX.XLN_ESCODEX.BTC">
-                            <img src="assets/img/icon/escodex.png" width="80" height="80"/>
+                                <img src="assets/img/icon/escodex.png" width="80" height="80"/>
                             </a>
                         </div>
                     </div>
@@ -132,7 +140,7 @@
                             <h4 class="text-second-color fw-500 mb-20px">Download the wallet</h4>
                             <p class="text-gray-dark">Download and install Lunarium wallet for your preferred
                                 platform</p>
-                            <a class="fa fa-download fs-3 text-white btn btn-fill-dark"
+                            <a class="fa fa-download fs-3 text-white btn btn-fill-dark font-weight-light"
                                href="https://github.com/LunariumCoin/lunarium/releases"></a>
                         </div>
                     </div>
@@ -141,7 +149,7 @@
                             <h4 class="text-second-color fw-500 mb-20px">Setup a Masternode</h4>
                             <p class="text-gray-dark">Use the Lunarium Masternode Installation script for easy
                                 installation</p>
-                            <a class="fa fa-cogs fs-3 text-white btn btn-fill-dark"
+                            <a class="fa fa-cogs fs-3 text-white btn btn-fill-dark font-weight-light"
                                href="https://github.com/LunariumCoin/Lunarium-MN-Install"></a>
                         </div>
                     </div>
@@ -150,7 +158,7 @@
                             <h4 class="text-second-color fw-500 mb-20px">Use the Block Explorer</h4>
                             <p class="text-gray-dark">Check a transaction, XLN address, or your Masternode
                                 status using Lunarium Explorer</p>
-                            <a class="fa fa-heartbeat fs-3 text-white btn btn-fill-dark"
+                            <a class="fa fa-heartbeat fs-3 text-white btn btn-fill-dark font-weight-light"
                                href="http://explorer.lunarium.io"></a>
                         </div>
                     </div>
@@ -188,7 +196,8 @@
                 <div class="step-box bg-gray-800 p-40px text-center rd-5 mb-md-30px mb-sm-30px mb-xs-30px">
                     <i class="fa fa-bolt fs-3 text-first-color d-block mb-20px"></i>
                     <h4 class="text-first-color fw-500 mb-20px">Fast Transactions</h4>
-                    <p class="text-first-color">The Lunarium blockchain is supported by a growing network of Masternodes,
+                    <p class="text-first-color">The Lunarium blockchain is supported by a growing network of
+                        Masternodes,
                         that guarantees that your transactions are processed rapidly.</p>
                 </div>
             </div>
@@ -222,6 +231,28 @@
     </div>
 </section>
 
+<!-- Development Roadmap -->
+<section id="roadmap" class="py-150px bg-gray-200">
+    <div class="heading-st-3 text-center mb-40px"><h2>Development Roadmap</h2></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Partnerships -->
+<section id="partnerships" class="py-150px bg-gray-900">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="heading-st-3 text-center mb-40px"><h2 class="text-white">Partnerships</h2></div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!-- Team -->
 <section id="team" class="py-150px bg-gray-900">
     <div class="container">
@@ -237,7 +268,7 @@
                 <br>
                 <span class="text-first-color fs-0_9 text-uppercase">Developer</span>
                 <p class="mb-0 mt-20px">
-                    Learned to program a long long time ago, when computers with 16K of RAM was a luxury...
+                    Learned to program a long long time ago, when computers with 16K of RAM were a luxury...
                 </p>
             </div>
             <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
@@ -258,7 +289,7 @@
                 <span class="text-first-color fs-0_9 text-uppercase">Peace Keeper</span>
                 <p class="mb-0 mt-20px">
                     HoneyBadger is the guardian of our Community, and a determined QA tester. Without the
-                    <i>'Badger</i>, it will be more chaotic around here. But don't mess with him...
+                    <i>'Badger</i>, it will be more chaotic around here. He's cool as long you don't mess with him...
                 </p>
             </div>
             <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
@@ -294,7 +325,7 @@
                 <span class="text-first-color fs-0_9 text-uppercase">Technical support & crypto enthusiastic</span>
                 <p class="mb-0 mt-20px">
                     Do you have a problem with your Masternode, are you wondering what to mine next with your
-                    (power-hungry) mining rigs, or would like  to chat about future crypto investments? Z3ricz is your
+                    (power-hungry) mining rigs, or would like to chat about future crypto investments? Z3ricz is your
                     best bet.
                 </p>
             </div>
@@ -309,8 +340,10 @@
         <div class="row">
             <div class="col-lg-12 mb-50px align-content-center">
                 <p>
-                    <a class="twitter-timeline" data-chrome="transparent noborders noheader nofooter noscrollbar" height="600" width="600" data-theme="light"
-                       href="https://twitter.com/LunariumCoin?ref_src=twsrc%5Etfw">Tweets by LunariumCoin</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    <a class="twitter-timeline" data-chrome="transparent noborders noheader nofooter noscrollbar"
+                       height="600" width="600" data-theme="light"
+                       href="https://twitter.com/LunariumCoin?ref_src=twsrc%5Etfw">Tweets by LunariumCoin</a>
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </p>
             </div>
         </div>
@@ -327,16 +360,20 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-3 mb-md-30px mb-sm-30px mb-xs-30px">
-                            <a class="fs-0_9 fa-discord btn btn-lg btn-fill-light" href="https://discordapp.com/invite/4nFZeJr">Discord</a>
+                            <a class="fs-0_9 fa-discord btn btn-lg btn-fill-light"
+                               href="https://discordapp.com/invite/4nFZeJr">Discord</a>
                         </div>
                         <div class="col-lg-3 mb-md-30px mb-sm-30px mb-xs-30px">
-                            <a class="fa fa-github fa-2x btn btn-lg btn-fill-light" href="https://github.com/LunariumCoin"></a>
+                            <a class="fa fa-github fa-2x btn btn-lg btn-fill-light"
+                               href="https://github.com/LunariumCoin"></a>
                         </div>
                         <div class="col-lg-3 mb-md-30px mb-sm-30px mb-xs-30px">
-                            <a class="fa fa-twitter fa-2x btn btn-lg btn-fill-light" href="https://twitter.com/lunariumcoin/"></a>
+                            <a class="fa fa-twitter fa-2x btn btn-lg btn-fill-light"
+                               href="https://twitter.com/lunariumcoin/"></a>
                         </div>
                         <div class="col-lg-3 mb-md-30px mb-sm-30px mb-xs-30px">
-                            <a class="fa fa-facebook fa-2x btn btn-lg btn-fill-light" href="https://www.facebook.com/lunariumcoin"></a>
+                            <a class="fa fa-facebook fa-2x btn btn-lg btn-fill-light"
+                               href="https://www.facebook.com/lunariumcoin"></a>
                         </div>
                     </div>
                 </div>
@@ -397,11 +434,15 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125131722-1"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-125131722-1');
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+
+    gtag('config', 'UA-125131722-1');
 </script>
 </body>
 </html>
