Fix the weird looking icons in the Community section.

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -234,9 +234,67 @@
 <!-- Development Roadmap -->
 <section id="roadmap" class="py-150px bg-gray-200">
     <div class="heading-st-3 text-center mb-40px"><h2>Development Roadmap</h2></div>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <!------ Include the above in your HEAD tag ---------->
+
     <div class="container">
         <div class="row">
-            <div class="col-lg-4">
+            <div class="timeline-centered">
+                <article class="timeline-entry">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon bg-success">
+                            <i class="entypo-feather"></i>
+                        </div>
+                        <div class="timeline-label">
+                            <h2><a href="#">Art Ramadani</a> <span>posted a status update</span></h2>
+                            <p>Tolerably earnestly middleton extremely distrusts she boy now not. Add and offered
+                                prepare how cordial two promise. Greatly who affixed suppose but enquire compact prepare
+                                all put. Added forth chief trees but rooms think may.</p>
+                        </div>
+                    </div>
+                </article>
+
+
+                <article class="timeline-entry">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon bg-secondary">
+                            <i class="entypo-suitcase"></i>
+                        </div>
+                        <div class="timeline-label">
+                            <h2><a href="#">Job Meeting</a></h2>
+                            <p>You have a meeting at <strong>Laborator Office</strong> Today.</p>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="timeline-entry">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon bg-warning">
+                            <i class="entypo-camera"></i>
+                        </div>
+                        <div class="timeline-label">
+                            <h2><a href="#">Arber Nushi</a> <span>changed his</span> <a href="#">Profile Picture</a>
+                            </h2>
+                            <blockquote>Pianoforte principles our unaffected not for astonished travelling are
+                                particular.
+                            </blockquote>
+                            <img src="assets/img/icon/escodex.png"
+                                 class="img-responsive img-rounded full-width">
+                        </div>
+                    </div>
+
+                </article>
+
+
+                <article class="timeline-entry begin">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon"
+                             style="-webkit-transform: rotate(-90deg); -moz-transform: rotate(-90deg);">
+                            <i class="entypo-flight"></i> +
+                        </div>
+                    </div>
+                </article>
             </div>
         </div>
     </div>
@@ -359,22 +417,32 @@
 
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-3 mb-md-30px mb-sm-30px mb-xs-30px">
-                            <a class="fs-0_9 fa-discord btn btn-lg btn-fill-light"
-                               href="https://discordapp.com/invite/4nFZeJr">Discord</a>
+                        <div class="col">
+                            <a href="https://discordapp.com/invite/4nFZeJr">
+                                <img src="assets/img/icon/Discord-Logo-White.png" width="80" height="80"/>
+                            </a>
                         </div>
-                        <div class="col-lg-3 mb-md-30px mb-sm-30px mb-xs-30px">
-                            <a class="fa fa-github fa-2x btn btn-lg btn-fill-light"
-                               href="https://github.com/LunariumCoin"></a>
+                        <div class="col">
+                            <a href="https://github.com/LunariumCoin">
+                                <img src="assets/img/icon/GitHub-Mark-Light-120px-plus.png" width="80" height="80">
+                            </a>
                         </div>
-                        <div class="col-lg-3 mb-md-30px mb-sm-30px mb-xs-30px">
-                            <a class="fa fa-twitter fa-2x btn btn-lg btn-fill-light"
-                               href="https://twitter.com/lunariumcoin/"></a>
+                        <div class="col">
+                            <a href="https://twitter.com/lunariumcoin/">
+                                <img src="assets/img/icon/Twitter_Social_Icon_Square_White.png" width="80" height="80">
+                            </a>
                         </div>
-                        <div class="col-lg-3 mb-md-30px mb-sm-30px mb-xs-30px">
-                            <a class="fa fa-facebook fa-2x btn btn-lg btn-fill-light"
-                               href="https://www.facebook.com/lunariumcoin"></a>
+                        <div class="col">
+                            <a href="https://www.facebook.com/lunariumcoin">
+                                <img src="assets/img/icon/facebook_logo_white.png" width="80" height="80">
+                            </a>
                         </div>
+                        <div class="col">
+                            <a href="https://bitcointalk.org/index.php?topic=5038045">
+                                <img src="assets/img/icon/bitcoin_logo.png" width="80" height="80"/>
+                            </a>
+                        </div>
+                        <div class="w-100"></div>
                     </div>
                 </div>
             </div>
