--- a/www/html/index.html
+++ b/www/html/index.html
@@ -234,10 +234,6 @@
 <!-- Development Roadmap -->
 <section id="roadmap" class="py-150px bg-gray-200">
     <div class="heading-st-3 text-center mb-40px"><h2>Development Roadmap</h2></div>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <!------ Include the above in your HEAD tag ---------->
-
     <div class="container">
         <div class="row">
             <div class="timeline-centered">
@@ -270,7 +266,7 @@
 
                 <article class="timeline-entry">
                     <div class="timeline-entry-inner">
-                        <div class="timeline-icon bg-warning">
+                        <div class="timeline-icon bg-danger">
                             <i class="entypo-camera"></i>
                         </div>
                         <div class="timeline-label">
@@ -306,6 +302,36 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="heading-st-3 text-center mb-40px"><h2 class="text-white">Partnerships</h2></div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <a href="https://www.coingecko.com/en/coins/lunarium">
+                                <img src="assets/img/icon/partners/CoinGecko-WhiteText.png" height="80"/>
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="https://coinlib.io/coin/XLN/Lunarium">
+                                <img src="assets/img/icon/partners/logo_glyph_light.png" height="80">
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="https://masternodes.pro/stats/xln/statistics">
+                                <img src="assets/img/icon/partners/MPlogo2.svg" height="80">
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="https://nodemarketcap.com/coin/lunarium/">
+                                <img src="assets/img/icon/partners/nodemarketcaplogowhite.png" height="80">
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="http://tradersgateway.net/currencies/LUNARIUM/Lunarium.html">
+                                <img src="assets/img/icon/partners/trader_gateway.png" height="80"/>
+                            </a>
+                        </div>
+                        <div class="w-100"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
