--- a/www/html/index.html
+++ b/www/html/index.html
@@ -231,6 +231,114 @@
     </div>
 </section>
 
+<!-- Coins Spec -->
+<section id="coins-specs" class="py-150px bg-gray-900">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="heading-st-3 text-center mb-40px"><h2 class="text-white">Coins Specifications</h2></div>
+            </div>
+            <table class="table table-striped table-dark">
+                <tbody>
+                <tr>
+                    <th scope="row">Algo</th>
+                    <td>Quark</td>
+                </tr>
+                <tr>
+                    <th scope="row">Block Time</th>
+                    <td>60 Seconds</td>
+                </tr>
+                <tr>
+                    <th scope="row">Difficulty Retargeting</th>
+                    <td>Every Block</td>
+                </tr>
+                <tr>
+                    <th scope="row">Max Coin Supply</th>
+                    <td>Infinite</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</section>
+
+<!-- PoS Rewards -->
+<section id="pos-rewards" class="py-150px bg-gray-900">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="heading-st-3 text-center mb-40px"><h2 class="text-white">PoS Rewards Breakdown</h2></div>
+            </div>
+            <table class="table table-striped table-dark">
+                <thead>
+                <tr>
+                    <th scope="col">From Block</th>
+                    <th scope="col">Reward</th>
+                    <th scope="col">Masternodes</th>
+                    <th scope="col">Stakers</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>0.001 XLN</td>
+                    <td>0.0007 XLN</td>
+                    <td>0.0003 XLN</td>
+                </tr>
+                <tr>
+                    <th scope="row">30,002</th>
+                    <td>10 XLN</td>
+                    <td>7 XLN</td>
+                    <td>3 XLN</td>
+                </tr>
+                <tr>
+                    <th scope="row">555,602</th>
+                    <td>9 XLN</td>
+                    <td>6.3 XLN</td>
+                    <td>2.7 XLN</td>
+                </tr>
+                <tr>
+                    <th scope="row">1,081,203</th>
+                    <td>8 XLN</td>
+                    <td>5.6 XLN</td>
+                    <td>2.4 XLN</td>
+                </tr>
+                <tr>
+                    <th scope="row">1,606,805</th>
+                    <td>7 XLN</td>
+                    <td>4.9 XLN</td>
+                    <td>2.1 XLN</td>
+                </tr>
+                <tr>
+                    <th scope="row">2,132,406</th>
+                    <td>6 XLN</td>
+                    <td>4.2 XLN</td>
+                    <td>1.8 XLN</td>
+                </tr>
+                <tr>
+                    <th scope="row">2,658,007</th>
+                    <td>5 XLN</td>
+                    <td>3.5 XLN</td>
+                    <td>1.5 XLN</td>
+                </tr>
+                <tr>
+                    <th scope="row">3,183,608</th>
+                    <td>4 XLN</td>
+                    <td>2.8 XLN</td>
+                    <td>1.2 XLN</td>
+                </tr>
+                <tr>
+                    <th scope="row">3,709,209</th>
+                    <td>3 XLN</td>
+                    <td>2.1 XLN</td>
+                    <td>0.9 XLN</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</section>
+
 <!-- Development Roadmap -->
 <section id="roadmap" class="py-150px bg-gray-200">
     <div class="heading-st-3 text-center mb-40px"><h2>Development Roadmap</h2></div>
