Added the Roadmap

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -345,16 +345,195 @@
     <div class="container">
         <div class="row">
             <div class="timeline-centered">
+
                 <article class="timeline-entry">
                     <div class="timeline-entry-inner">
-                        <div class="timeline-icon bg-success">
+                        <div class="timeline-icon bg-warning">
                             <i class="entypo-feather"></i>
                         </div>
                         <div class="timeline-label">
-                            <h2><a href="#">Art Ramadani</a> <span>posted a status update</span></h2>
-                            <p>Tolerably earnestly middleton extremely distrusts she boy now not. Add and offered
-                                prepare how cordial two promise. Greatly who affixed suppose but enquire compact prepare
-                                all put. Added forth chief trees but rooms think may.</p>
+                            <h2><a href="#">Fix any outstanding bugs, stabilize code.</a></h2>
+                                <span>On Going</span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="timeline-entry">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon bg-secondary">
+                            <i class="entypo-feather"></i>
+                        </div>
+                        <div class="timeline-label">
+                            <h2><a href="#">Wallet: Create Masternode button</a></h2>
+                            <span>Q4 2018</span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="timeline-entry">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon bg-secondary">
+                            <i class="entypo-suitcase"></i>
+                        </div>
+                        <div class="timeline-label">
+                            <h2><a href="#">Whitepaper released</a></h2>
+                            <span>Q1 2019</span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="timeline-entry">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon bg-secondary">
+                            <i class="entypo-suitcase"></i>
+                        </div>
+                        <div class="timeline-label">
+                            <h2><a href="#">.deb package for Ubuntu Linux</a></h2>
+                            <span>Q1 2019</span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="timeline-entry">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon bg-secondary">
+                            <i class="entypo-suitcase"></i>
+                        </div>
+                        <div class="timeline-label">
+                            <h2><a href="#">Wallet: Auto-selection of transactions based on advanced selection criteria</a></h2>
+                            <span>Q1 2019</span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="timeline-entry">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon bg-secondary">
+                            <i class="entypo-suitcase"></i>
+                        </div>
+                        <div class="timeline-label">
+                            <h2><a href="#">Add support for hot MasterNodes on Windows</a></h2>
+                            <span>Q1 2019</span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="timeline-entry">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon bg-secondary">
+                            <i class="entypo-suitcase"></i>
+                        </div>
+                        <div class="timeline-label">
+                            <h2><a href="#">Wallet: Proposal Tab</a></h2>
+                            <span>Q1 2019</span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="timeline-entry">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon bg-secondary">
+                            <i class="entypo-suitcase"></i>
+                        </div>
+                        <div class="timeline-label">
+                            <h2><a href="#">Fix multi-signature functionality</a></h2>
+                            <span>Q1 2019</span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="timeline-entry">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon bg-secondary">
+                            <i class="entypo-suitcase"></i>
+                        </div>
+                        <div class="timeline-label">
+                            <h2><a href="#">Support for Ubuntu 18.04 LTS</a></h2>
+                            <span>Q1 2019</span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="timeline-entry">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon bg-success">
+                            <i class="entypo-suitcase"></i>
+                        </div>
+                        <div class="timeline-label">
+                            <h2><a href="#">Further exchange listings (now supported on EscoDex!)</a></h2>
+                            <span>Q1 2019 - DONE</span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="timeline-entry">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon bg-warning">
+                            <i class="entypo-suitcase"></i>
+                        </div>
+                        <div class="timeline-label">
+                            <h2><a href="#">CoinMarketCap listing</a></h2>
+                            <span>Q2 2019 - On Going</span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="timeline-entry">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon bg-secondary">
+                            <i class="entypo-suitcase"></i>
+                        </div>
+                        <div class="timeline-label">
+                            <h2><a href="#">Fix budget proposal payments</a></h2>
+                            <span>Q2 2019</span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="timeline-entry">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon bg-secondary">
+                            <i class="entypo-suitcase"></i>
+                        </div>
+                        <div class="timeline-label">
+                            <h2><a href="#">Change consensus to use secp256k1 instead of OpenSSL</a></h2>
+                            <span>Q2 2019</span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="timeline-entry">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon bg-secondary">
+                            <i class="entypo-suitcase"></i>
+                        </div>
+                        <div class="timeline-label">
+                            <h2><a href="#">Ledger Wallet support</a></h2>
+                            <span>Q2 2019</span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="timeline-entry">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon bg-secondary">
+                            <i class="entypo-suitcase"></i>
+                        </div>
+                        <div class="timeline-label">
+                            <h2><a href="#">Ledger Wallet support</a></h2>
+                            <span>Q3 2019</span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="timeline-entry">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon bg-secondary">
+                            <i class="entypo-suitcase"></i>
+                        </div>
+                        <div class="timeline-label">
+                            <h2><a href="#">Payment Gateway</a></h2>
+                            <span>Q3 2019</span>
                         </div>
                     </div>
                 </article>
@@ -366,30 +545,47 @@
                             <i class="entypo-suitcase"></i>
                         </div>
                         <div class="timeline-label">
-                            <h2><a href="#">Job Meeting</a></h2>
-                            <p>You have a meeting at <strong>Laborator Office</strong> Today.</p>
+                            <h2><a href="#"> IOT device wallets (such as Android TV) with support for staking</a></h2>
+                            <span>Q3 2019</span>
                         </div>
                     </div>
                 </article>
 
                 <article class="timeline-entry">
                     <div class="timeline-entry-inner">
-                        <div class="timeline-icon bg-danger">
-                            <i class="entypo-camera"></i>
+                        <div class="timeline-icon bg-secondary">
+                            <i class="entypo-suitcase"></i>
                         </div>
                         <div class="timeline-label">
-                            <h2><a href="#">Arber Nushi</a> <span>changed his</span> <a href="#">Profile Picture</a>
-                            </h2>
-                            <blockquote>Pianoforte principles our unaffected not for astonished travelling are
-                                particular.
-                            </blockquote>
-                            <img src="assets/img/icon/escodex.png"
-                                 class="img-responsive img-rounded full-width">
+                            <h2><a href="#">Web Wallet</a></h2>
+                            <span>Q3 2019</span>
                         </div>
                     </div>
-
                 </article>
 
+                <article class="timeline-entry">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon bg-secondary">
+                            <i class="entypo-suitcase"></i>
+                        </div>
+                        <div class="timeline-label">
+                            <h2><a href="#">Mobile Wallets</a></h2>
+                            <span>Q4 2019</span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="timeline-entry">
+                    <div class="timeline-entry-inner">
+                        <div class="timeline-icon bg-secondary">
+                            <i class="entypo-suitcase"></i>
+                        </div>
+                        <div class="timeline-label">
+                            <h2><a href="#">Decentralized peer to peer wallet trading</a></h2>
+                            <span>Q1 2020</span>
+                        </div>
+                    </div>
+                </article>
 
                 <article class="timeline-entry begin">
                     <div class="timeline-entry-inner">
