--- a/www/html/index.html
+++ b/www/html/index.html
@@ -139,7 +139,7 @@
                         <div class="step-box bg-gray-100 p-40px text-center rd-5 mb-md-30px mb-sm-30px mb-xs-30px">
                             <h4 class="text-second-color fw-500 mb-20px">Download the wallet</h4>
                             <p class="text-gray-dark">Download and install Lunarium wallet for your preferred
-                                platform</p>
+                                operating system (we support Windows, Linux, and Mac)</p>
                             <a class="fa fa-download fs-3 text-white btn btn-fill-dark font-weight-light"
                                href="https://github.com/LunariumCoin/lunarium/releases"></a>
                         </div>
@@ -509,18 +509,6 @@
                         </div>
                         <div class="timeline-label">
                             <h2><a href="#">Ledger Wallet support</a></h2>
-                            <span>Q2 2019</span>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="timeline-entry">
-                    <div class="timeline-entry-inner">
-                        <div class="timeline-icon bg-secondary">
-                            <i class="entypo-suitcase"></i>
-                        </div>
-                        <div class="timeline-label">
-                            <h2><a href="#">Ledger Wallet support</a></h2>
                             <span>Q3 2019</span>
                         </div>
                     </div>
@@ -545,7 +533,7 @@
                             <i class="entypo-suitcase"></i>
                         </div>
                         <div class="timeline-label">
-                            <h2><a href="#"> IOT device wallets (such as Android TV) with support for staking</a></h2>
+                            <h2><a href="#"> IoT device wallets (such as Android TV, Raspberry Pi) with support for staking</a></h2>
                             <span>Q3 2019</span>
                         </div>
                     </div>
