Added MNO in partenerships.

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -376,7 +376,7 @@
                             <i class="entypo-suitcase"></i>
                         </div>
                         <div class="timeline-label">
-                            <h2><a href="#">Whitepaper released</a></h2>
+                            <h2><a href="#">Whitepaper publication</a></h2>
                             <span>Q1 2019</span>
                         </div>
                     </div>
@@ -456,12 +456,12 @@
 
                 <article class="timeline-entry">
                     <div class="timeline-entry-inner">
-                        <div class="timeline-icon bg-success">
+                        <div class="timeline-icon bg-warning">
                             <i class="entypo-suitcase"></i>
                         </div>
                         <div class="timeline-label">
-                            <h2><a href="#">Further exchange listings (now supported on EscoDex!)</a></h2>
-                            <span>Q1 2019 - DONE</span>
+                            <h2><a href="#">Further exchange listings (now on EscoDex!)</a></h2>
+                            <span>Q1 2019 - On Going</span>
                         </div>
                     </div>
                 </article>
@@ -596,29 +596,37 @@
                 <div class="heading-st-3 text-center mb-40px"><h2 class="text-white">Partnerships</h2></div>
                 <div class="container">
                     <div class="row">
-                        <div class="col">
+                        <div class="col" align="center">
                             <a href="https://www.coingecko.com/en/coins/lunarium">
                                 <img src="assets/img/icon/partners/CoinGecko-WhiteText.png" height="80"/>
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="col" align="center">
                             <a href="https://coinlib.io/coin/XLN/Lunarium">
                                 <img src="assets/img/icon/partners/logo_glyph_light.png" height="80">
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="col" align="center">
                             <a href="https://masternodes.pro/stats/xln/statistics">
                                 <img src="assets/img/icon/partners/MPlogo2.svg" height="80">
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="w-100"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col" align="center">
                             <a href="https://nodemarketcap.com/coin/lunarium/">
                                 <img src="assets/img/icon/partners/nodemarketcaplogowhite.png" height="80">
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="col" align="center">
                             <a href="http://tradersgateway.net/currencies/LUNARIUM/Lunarium.html">
                                 <img src="assets/img/icon/partners/trader_gateway.png" height="80"/>
+                            </a>
+                        </div>
+                        <div class="col" align="center">
+                            <a href="https://masternodes.online/currencies/XLN">
+                                <img src="assets/img/icon/partners/logo_mno.png" height="80"/>
                             </a>
                         </div>
                         <div class="w-100"></div>
