Removed MNPro logo, and added Dice-Age logo from partners section. Removed Roddy, and Robine from the team, added BitcoinMinion.

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -607,8 +607,8 @@
                             </a>
                         </div>
                         <div class="col" align="center">
-                            <a href="https://masternodes.pro/stats/xln/statistics">
-                                <img src="assets/img/icon/partners/MPlogo2.svg" height="80">
+                            <a href="https://dice-age.com">
+                                <img src="assets/img/icon/partners/dice-age80x80.png" height="80">
                             </a>
                         </div>
                         <div class="w-100"></div>
@@ -677,12 +677,12 @@
                 </p>
             </div>
             <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
-                <img src="assets/img/robine.jpeg" alt="" class="mb-30px rd-5">
-                <h3 class="mb-0 text-white">Robine</h3>
-                <span class="text-first-color fs-0_9 text-uppercase">Communication & Grammar Police</span>
+                <img src="assets/img/bitcoinminion.jpeg" alt="" class="mb-30px rd-5">
+                <h3 class="mb-0 text-white">Bitcoinminion</h3>
+                <span class="text-first-color fs-0_9 text-uppercase">Crypto Specialist</span>
                 <p class="mb-0 mt-20px">
-                    If you contact us by email, good chances are that you will interact with Robine. He is
-                    Shakespeare reincarnation. We are glad Batman let him join our team.
+                    Bitcoinminion is our crypto specialist. He is an active contributor of a
+                    few existing altcoin, and an invaluable advisor for the Lunarium project.
                 </p>
             </div>
             <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
@@ -692,15 +692,6 @@
                 <p class="mb-0 mt-20px">
                     Flong is our king of staking, and he will help you with your wallet, wherever you decide to
                     run it: Windows, Linux, or even on a Raspberry Pi.
-                </p>
-            </div>
-            <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
-                <img src="assets/img/roddy.jpeg" alt="" class="mb-30px rd-5">
-                <h3 class="mb-0 text-white">Roddy</h3>
-                <span class="text-first-color fs-0_9 text-uppercase">Social Media & Community Management</span>
-                <p class="mb-0 mt-20px">
-                    Roddy is our marketing guy, and social media publisher. You can talk with him in English,
-                    French or Portuguese, your choice.
                 </p>
             </div>
             <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
